--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/* V-CLOAK */
+[v-cloak] { display:none; }
+/* FINE V-CLOAK */
+
+
 * {
     margin: 0;
     padding: 0;
@@ -14,11 +19,114 @@ body {
     rgb(255, 255, 255) 80%, rgb(255, 255, 255) 80%, rgb(0, 140, 126) 20%, rgb(0 ,140, 126) 20%);
 }
 
-/* COMMON */
+
+/* COMUNI */
+
+/* Barra superiore */
+.top-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 10%;
+    padding: 0 2%;
+    background-color: rgb(231, 231, 231);
+}
+/* Fine barra superiore */
+
+
+/* Hover */
+i:hover {
+    cursor: pointer;
+}
+/* Fine hover */
+
+
+/* Larghezze */
+.w-60 {
+    width: 60%;
+}
+/* Fine larghezze */
+
+
+/* Bordi */
 .border-right {
     border-right: 1px solid grey;
 }
-/* FINE COMMON */
+/* Fine bordi */
+
+
+.user-box {
+    display: flex;
+    align-items: center;
+    padding: 2%;
+}
+
+
+/* Avatar */
+.avatar {
+    vertical-align: middle;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    margin-right: 3%;
+}
+/* Fine avatar */
+
+
+/* Box - icone */
+.box-icons {
+    display: flex;
+    justify-content: space-around;
+    margin: 0 8%;
+}
+/* Fine box - icone */
+
+
+/* Testo */
+.small-text {
+    font-size: 80%;
+    color: rgb(95, 104, 107);
+}
+
+.icons-style1 {
+    font-size: 120%;
+    color: rgb(168, 168, 168);
+}
+/* Fine testo */
+
+
+/* Margin */
+.side-text {
+    margin-left: 4%;
+}
+/* Fine margin */
+
+
+/* Colori di sfondo */
+.green {
+    background-color: rgb(208, 248, 182);  
+}
+
+.white {
+    background-color: white;
+}
+/* Fine colori di sfondo */
+
+
+.user {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.interlocutor {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+/* FINE COMUNI */
 
 
 .container {
@@ -28,64 +136,176 @@ body {
 }
 
 
-/* Menù di sinistra */
+/* MENU' DI SINISTRA */
 .container .left-container {
-    width: 40%;
+    width: 32%;
     height: 100%;
-    background-color:  rgb(249, 249, 249);
-
+    background-color:  rgb(249, 249, 249);  
 }
 
+
+/* BARRA SUPERIORE */
+.container .left-container .top-bar .box-icons i {
+    margin-right: 35%;
+}
+
+/* FINE BARRA SUPERIORE */
+
+
+/* AREA NOTIFICHE */
 .container .left-container .notifications {
+    display: flex;
+    align-items: center;
     width: 100%;
     height: 11.5%;
     background-color: rgb(123, 214, 249);
 }
 
+.container .left-container .notifications .fa-bell-slash {
+    margin: 0 5%;
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    font-size: 140%;
+    text-align: center;
+    color: rgb(123, 214, 249);
+    background-color: white;
+    border-radius: 30px;
+}
+
+.container .left-container .notifications p:last-of-type {
+    font-size: 80%;
+    text-decoration: underline;
+    color: rgb(66, 105, 121);
+}
+
+.container .left-container .notifications p:last-of-type:hover {
+    cursor: pointer;
+}
+
+/* FINE AREA NOTIFICHE */
+
+
+/* AREA DI RICERCA CHAT */
 .container .left-container .research {
     display: flex;
     align-items: center;
     width: 100%;
     height: 8%;
+    padding: 3%;
 }
 
 .container .left-container .research input {
+    border: none;
     width: 80%;
-    padding: 1%;
 }
 
+.container .left-container .research > div {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0 5%;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+}
+
+.container .left-container .research i {
+    color: rgb(173, 173, 173);
+}
+
+/* FINE ARE DI RICERCA CHAT */
+
+
+/* AREA LISTA CONTATTI */
 .container .left-container .contacts-list {
     width: 100%;
     height: calc(100% - 10% - 11.5% - 8%);
-    background-color: burlywood;
+    background-color: rgb(255, 255, 255);
     overflow-y: scroll;
 }
-/* Fine menù sinistra */
+
+.container .left-container .contacts-list .contact {
+    display: flex;
+    padding: 3%;
+    border-top: 1px solid rgb(247, 247, 247);
+ }
+
+ .container .left-container .contacts-list .contact:hover {
+     cursor: pointer;
+     background-color: rgb(230, 232, 232);
+ }
+
+/* FINE AREA LISTA CONTATTI */
+
+/* FINE MENU' DI SINISTRA */
 
 
-.top-bar {
-    width: 100%;
-    height: 10%;
-    background-color: rgb(231, 231, 231);
-}
-
-
-/* Menù di destra */
+/* MENU' DI DESTRA */
 .container .right-container {
-    width: calc(100% - 40%);
+    width: calc(100% - 32%);
     height: 100%;
-    background-color: rgb(66, 5, 5);
 }
 
-.container .right-container .box-messages {
+
+/* BARRA SUPERIORE */
+.container .right-container .top-bar .box-icons i {
+    margin-right: 45%;
+}
+
+/* FINE BARRA SUPERIORE */
+
+
+/* AREA MESSAGGI */
+.container .right-container .area-messages {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: calc(100% - 10% - 10%);
+    padding: 5%;
     background-image: url('img/mine.jpg');
+    overflow-y: scroll;
 }
 
+/* Struttura messaggi */
+.container .right-container .area-messages .box-message {
+    
+}
+
+.container .right-container .area-messages .message {
+    max-width: 45%;
+    margin: 1% 0;
+    padding: 2.5%;
+    border-radius: 10px;
+}
+/* Fine struttura messaggi */
+
+/* FINE AREA MESSAGGI */
+
+
+/* MENU' CHAT TESTO */
 .container .right-container .chat-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-around;
     height: 10%;
     width: 100%;
-    background-color: rgb(242, 235, 231);
 }
-/* Fine menù destra */
+
+.container .right-container .chat-text input {
+    width: 80%;
+    height: 75%;
+    padding: 0 3%;
+    border-radius: 10px;
+    border: none;
+}
+
+.container .right-container .chat-text i {
+    margin: 0 auto;
+    color: rgb(95, 104, 107);
+}
+
+/* FINE MENU' CHAT TESTO */
+
+/* FINE MENU' DI DESTRA */
