--- a/style.css
+++ b/style.css
@@ -291,6 +291,7 @@ i:hover {
     justify-content: space-around;
     height: 10%;
     width: 100%;
+    background-color: rgb(242, 235, 231);
 }
 
 .container .right-container .chat-text input {
