--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     height: 100vh;
     font-family: 'Lato', sans-serif;
     background: linear-gradient(to top,
-    rgb(255, 255, 255) 80%, rgb(255, 255, 255) 80%, rgb(0, 140, 126) 20%, rgb(0 ,140, 126) 20%);
+    rgb(215, 215, 205) 80%, rgb(215, 215, 205) 80%, rgb(0, 140, 126) 20%, rgb(0 ,140, 126) 20%);
 }
 
 
@@ -124,6 +124,11 @@ i:hover {
 }
 /* Fine margin */
 
+/* Active */
+.active {
+    background-color: rgb(231, 231, 231);
+}
+/* Fine active */
 
 .received {
     background-color: white;
