--- a/style.css
+++ b/style.css
@@ -101,13 +101,14 @@ i:hover {
 
 .message-text {
     font-size: 80%;
+    text-align: left;
 }
 
 .date-text {
     position: absolute;
     right: 5%;
     bottom: 5%;
-    font-size: 60%;
+    font-size: 50%;
     color: rgb(95, 104, 107);
 }
 
@@ -290,10 +291,16 @@ i:hover {
 
 .container .right-container .area-messages .message {
     position: relative;
+    width: max-content;
     max-width: 40%;
+    min-width: 18%;
     max-height: 50%;
     padding: 2.5%;
     border-radius: 10px;
+}
+
+.container .right-container .area-messages .message span {
+    width: max-content;
 }
 /* Fine struttura messaggi */
 
